# EE6470

./: README.md
Slide/: Lab2.key  Midterm.key
hw0/: README.md
hw0/part1/: Makefile  median_filter.cpp  medium_filter.cpp  sobel.c
hw0/part2/: Makefile  main.cpp  median.cpp  median.hpp
hw1/part1/: Makefile
hw1/part2/: Makefile  median.hpp
hw2/: 107061517.md  README.md
hw2/part1/: Makefile  main.cpp  median.cpp  median.hpp  testbench.cpp
hw2/part2/: main.cpp  median.cpp  median.hpp  testbench.cpp
hw3/: Initiator.cpp  Initiator.hpp  main.cpp  median.cpp  median.hpp  testbench.cpp
hw4/: Makefile  MemoryMap.h  README.md  SimpleBus.h  hw3_107061517.md  main.cpp  median.hpp  memory_map.h  testbench.cpp
hw5/: README.md
hw5/Part1/src/: CMakeLists.txt  main.cpp
hw5/Part1/src/acc_platform/: acc_platform.cpp  acc_platform.h
hw5/Part1/src/pool_engine/: CMakeLists.txt  pool_engine.cpp  pool_engine.h
hw5/Part1/src/testbench/: BaremetalDNN_Op.cpp  BaremetalDNN_Tensor.h  BaremetalDNN_main.cpp  CMakeLists.txt  Config.h  Op.h  OpUtil.h  ShapeTy.h  dlpack.h  runtime.h
hw5/Part2/: CMakeLists.txt
hw5/Part2/src/acc_platform/: CMakeLists.txt
hw5/Part2/src/testbench/: BaremetalDNN_Toplevel.cpp  BaremetalDNN_model.h  Op.cpp  OpUtil.cpp
hw5/src/: main.cpp
hw5/src/memory/: memory_model.h
hw5/src/testbench/: BaremetalDNN_Op.h  Op.cpp  c_runtime_api.h  main.cpp  testbench.cpp  testbench.h
hw6/: Pooling.cpp  Pooling.h  README.md  System.cpp  System.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
hw6/Part1/: System.cpp
hw6/Part2/: Pooling.cpp  Pooling.h  Testbench.cpp  Testbench.h  main.cpp
hw6/stratus/: project.tcl
hw7/: README.md  clean.sh  test.sh
hw7/application/: CMakeLists.txt
hw7/application/cmake/: Toolchain-archc-riscv.cmake
hw7/application/src/: CMakeLists.txt
hw7/application/src/hello_world/: CMakeLists.txt  main.cpp
hw7/application/src/lenet/: BaremetalDNN_Op.cpp  BaremetalDNN_Tensor.h  BaremetalDNN_Toplevel.cpp  BaremetalDNN_Toplevel.h  Op.cpp  OpUtil.cpp  ShapeTy.cpp  ShapeTy.h  memory_map.h  runtime.cpp  runtime.h
hw7/application/src/pooling_hw_test/: CMakeLists.txt  control_api.cpp  control_api.h  main.cpp
hw7/application/src/pooling_sw_test/: CMakeLists.txt  main.cpp
hw7/platform/: CMakeLists.txt
hw7/platform/src/: CMakeLists.txt  main.cpp
hw7/platform/src/cpu_core/: cpu_core.cpp  cpu_core.h  scml_bridge.cpp
hw7/platform/src/memory/: CMakeLists.txt  memory_model.cpp
hw8/: README.md  rebuild_app.sh
hw8/application/: CMakeLists.txt
hw8/application/cmake/: Toolchain-riscv.cmake
hw8/application/src/: CMakeLists.txt
hw8/application/src/hello/: CMakeLists.txt  hello.c
hw8/application/src/lenet/: CMakeLists.txt  Op.cpp  OpUtil.cpp  OpUtil.h  ShapeTy.h  c_runtime_api.h  control_api.cpp  control_api.h  dlpack.h  main.cpp
hw8/application/src/lib/: CMakeLists.txt  crt0.s  imperas.s  sync.c  sync.h  sync.s
hw8/application/src/pi/: CMakeLists.txt  pi.c
hw8/application/src/pi_cxx/: CMakeLists.txt  pi.cpp
hw8/platform/: CMakeLists.txt
hw8/platform/src/: CMakeLists.txt  main.cpp
hw8/platform/src/acc_platform/: CMakeLists.txt  acc_platform.cpp  acc_platform.h
hw8/platform/src/acc_platform/common/: memory_map.h
hw8/platform/src/acc_platform/dma/: dma.h
hw8/platform/src/acc_platform/memory/: memory_model.cpp  memory_model.h
hw8/platform/src/multi_cpu_core/: CMakeLists.txt  multi_cpu_core.h
hw8/platform/src/multi_cpu_core/cpu_core/: CMakeLists.txt  cpu_core.cpp  cpu_core.h
hw8/platform/src/multi_cpu_core/scml_bridge/: CMakeLists.txt  scml_bridge.h
midterm/: Pooling.cpp  Pooling.h  README.md  Testbench.cpp  Testbench.h  filter_def.h
midterm/2D_Convolution_Stratus/: Pooling.cpp  Pooling.h  System.h  Testbench.cpp  filter_def.h
midterm/2D_Convolution_Stratus/stratus/: project.tcl
midterm/MobileNet_SCML/src/: CMakeLists.txt
midterm/MobileNet_SCML/src/common/: memory_map.h
midterm/MobileNet_SCML/src/conv_engine/: conv_engine.cpp  conv_engine.h
midterm/MobileNet_SCML/src/testbench/: BaremetalDNN_Op.cpp  BaremetalDNN_Op.h  BaremetalDNN_Tensor.h  BaremetalDNN_Toplevel.cpp  BaremetalDNN_Toplevel.h  BaremetalDNN_main.cpp  Config.h  Op.cpp  testbench.cpp  testbench.h
midterm/MobileNet_layer3_SCML/src/acc_platform/: acc_platform.cpp  acc_platform.h
midterm/MobileNet_layer3_SCML/src/common/: memory_map.h
midterm/MobileNet_layer3_SCML/src/conv_engine/: CMakeLists.txt  conv_engine.cpp
midterm/MobileNet_layer3_SCML/src/dma/: CMakeLists.txt  dma.cpp
midterm/MobileNet_layer3_SCML/src/testbench/: BaremetalDNN_Op.cpp  BaremetalDNN_Op.h  BaremetalDNN_Tensor.h  BaremetalDNN_Toplevel.cpp  BaremetalDNN_Toplevel.h  BaremetalDNN_main.cpp  BaremetalDNN_model.h  Config.h  Op.cpp  OpUtil.cpp  runtime.cpp  testbench.cpp  testbench.h
